# sionna

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 10-bug_report.md  20-feature_request.md  90-blank.md
.github/workflows/: codeql-analysis.yml  commit-message.yml  pylint.yml
doc/: Makefile  serve.py
doc/source/: citation.rst  conf.py  index.rst  installation.rst  made_with_sionna.rst
doc/source/_ext/: bibtex_crossdoc_backrefs.py  bibtex_key_label.py  input_output_fields.py  made_with_sionna.py  mitsuba_drjit_links.py  pytorch_links.py  typing_links.py
doc/source/_static/: custom-icons.js  custom.css
doc/source/phy/: index.rst  phy.bib  references.rst
doc/source/sys/: index.rst  references.rst  sys.bib
src/sionna/: __init__.py
src/sionna/phy/: __init__.py  block.py  config.py  constants.py  mapping.py  object.py
src/sionna/sys/: __init__.py  scheduling.py  (+6 more)
test/: conftest.py
test/unit/: test_block.py  test_config.py  test_mapping.py  test_object.py  test_utils_linalg.py  test_utils_metrics.py  test_utils_misc.py  test_utils_numerics.py  test_utils_plotting.py  test_utils_tensors.py
tutorials/: clean_notebook_outputs.py  run_all_notebooks.sh
tutorials/phy/: 5G_Channel_Coding_Polar_vs_LDPC_Codes.ipynb  5G_NR_PUSCH.ipynb  Autoencoder.ipynb  Bit_Interleaved_Coded_Modulation.ipynb  CIR_Dataset.ipynb  Discover_Sionna.ipynb  Evolution_of_FEC.ipynb  Introduction_to_Iterative_Detection_and_Decoding.ipynb  Link_Level_Simulations_with_RT.ipynb  Neural_Receiver.ipynb  OFDM_MIMO_Detection.ipynb  Optical_Lumped_Amplification_Channel.ipynb  Pulse_Shaping_Basics.ipynb  Realistic_Multiuser_MIMO_Simulations.ipynb  Simple_MIMO_Simulation.ipynb  Sionna_tutorial_part1.ipynb  Sionna_tutorial_part2.ipynb  Sionna_tutorial_part3.ipynb  Sionna_tutorial_part4.ipynb  Superimposed_Pilots.ipynb  Weighted_BP_Algorithm.ipynb
tutorials/sys/: End-to-End_Example.ipynb  HexagonalGrid.ipynb  LinkAdaptation.ipynb  PHY_Abstraction.ipynb  Power_Control.ipynb  SYS_Meets_RT.ipynb  Scheduling.ipynb
(+271 files in other folders)
