[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sionna*"]
exclude = ["sionna.rt*"]

[tool.setuptools.package-data]
"sionna" = ["**/*.csv", "**/*.npy", "**/*.json"]

[tool.setuptools.exclude-package-data]
"sionna.rt" = ["*"]

[project]
name = "sionna"
version = "2.0.0"
description = "Sionna - A hardware-accelerated differentiable open-source library for research on communication systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    { name = "The Sionna contributors", email = "sionna@nvidia.com" }
]
keywords = [
    "communication systems",
    "ray tracing",
    "physical layer",
    "link-level simulation",
    "system-level simulation",
    "5G",
    "6G",
    "radio propagation",
    "channel model",
    "wireless communication",
    "optical communication",
    "wireless networks",
    "deep learning",
    "differentiable simulation",
    "differentiable ray tracing",
    "gradient-based optimization",
    "automatic differentiation",
    "neural networks",
    "machine learning",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.15.1",
    "importlib-resources>=6.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sionna-rt",
    "torch>=2.9.1",
]

[project.optional-dependencies]
    doc = [
    "ipython",
    "nbsphinx==0.9.8",
    "pydata-sphinx-theme==0.16.1",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinxcontrib-bibtex>=2.6,<3"
    ]
    test = [
        "pytest",
        "pytest-xdist"
    ]


[project.urls]
source = "https://github.com/nvlabs/sionna/"
documentation = "https://nvlabs.github.io/sionna/"
issues = "https://github.com/nvlabs/sionna/issues"

[tool.pytest.ini_options]
testpaths = ["test/unit"]
